--- a/package.json
+++ b/package.json
@@ -1,1 +1,27 @@
-{"name":"styles","compilerOptions":{"target":"ESNext","module":"ESNext","moduleResolution":"Node","strict":true,"jsx":"react-jsx","jsxImportSource":"preact","esModuleInterop":true,"forceConsistentCasingInFileNames":true,"skipLibCheck":true,"allowSyntheticDefaultImports":true,"resolveJsonModule":true,"isolatedModules":true,"baseUrl":".","paths":{"@/*":["src/*"]},"types":["vite/client","preact"]},"include":["src"],"scripts":{"dev":"vite","build":"vite build"},"exclude":["node_modules","dist"],"dependencies":{"@codemirror/state":"^6.5.2","@codemirror/view":"^6.38.1","@mui/icons-material":"^7.2.0","preact":"^10.26.9","react":"^19.1.0","react-dom":"^19.1.0"},"devDependencies":{"@emotion/react":"^11.14.0","@emotion/styled":"^11.14.1","@mui/material":"^7.2.0","@preact/preset-vite":"^2.10.2","@types/react":"^19.1.9","@types/react-dom":"^19.1.7","formik":"^2.4.6","vite":"^7.0.5"}}
+{
+  "name": "obsidian-sample-plugin-master",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
+  "dependencies": {
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.38.1",
+    "@mui/icons-material": "^7.2.0",
+    "preact": "^10.26.9",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "dayjs": "^1.11.10"
+  },
+  "devDependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.2.0",
+    "@preact/preset-vite": "^2.10.2",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "formik": "^2.4.6",
+    "vite": "^7.0.5"
+  }
+}
