--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,23 @@
-
-
-
 {
-"compilerOptions": {
-"target": "ES2020",
-"module": "ESNext",
-"moduleResolution": "Node",
-"jsx": "react-jsx",
-"jsxImportSource": "preact",
-"esModuleInterop": true,
-"strict": true,
-"allowSyntheticDefaultImports": true,
-"resolveJsonModule": true,
-"outDir": "dist",
-"baseUrl": ".",
-"paths": {
-"obsidian": ["types/obsidian/index"]
-},
-"types": ["preact"]
-},
-"include": ["src/**/*.ts", "src/**/*.tsx"]
-}
+    "compilerOptions": {
+      "target": "ESNext",
+      "module": "ESNext",
+      "moduleResolution": "Node",
+      "strict": true,
+      "jsx": "react-jsx",
+      "jsxImportSource": "preact",
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "skipLibCheck": true,
+      "allowSyntheticDefaultImports": true,
+      "resolveJsonModule": true,
+      "isolatedModules": true,
+      "baseUrl": ".",
+      "paths": {
+        "@/*": ["src/*"]
+      },
+      "types": ["vite/client", "preact"]
+    },
+    "include": ["src"],
+    "exclude": ["node_modules", "dist"]
+  }
