--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.38.1",
     "@mui/icons-material": "^7.2.0",
+    "dayjs": "^1.11.13",
     "preact": "^10.26.9",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "dayjs": "^1.11.10"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
     "@preact/preset-vite": "^2.10.2",
+    "@rollup/plugin-replace": "^6.0.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "formik": "^2.4.6",
-    "vite": "^7.0.5"
+    "vite": "^7.0.6"
   }
 }
