--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "formik": "^2.4.6",
+    "glob": "^11.0.3",
+    "typescript": "^5.9.2",
     "vite": "^7.0.6"
   }
 }
