08-11 01 状态管理细化

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
         "@core/*": ["src/core/*"],  // 后续使用
         "@platform/*": ["src/platform/*"],
         "@features/*": ["src/features/*"],
-        "@shared/*": ["src/shared/*"]
+        "@shared/*": ["src/shared/*"],
+        "@state/*": ["src/state/*"]
       },
       "types": ["vite/client", "preact"]
     },
