--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "preact": "^10.26.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.10.0",
     "use-immer": "^0.11.0"
   },
   "devDependencies": {
