--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
+    "@playwright/test": "^1.55.0",
     "@preact/preset-vite": "^2.10.2",
     "@rollup/plugin-replace": "^6.0.2",
     "@types/react": "^19.1.9",
