--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test:e2e:start-obsidian": "start \"Obsidian for Test\" \"D:\\PROGRA~2\\Obsidian\\Obsidian.exe\" --remote-debugging-port=9222 \"G:\\vikahz\"",
-  "test:e2e:run": "playwright test"
+    "test:e2e": "wdio run ./wdio.conf.ts"
   },
   "dependencies": {
     "@codemirror/state": "^6.5.2",
@@ -27,14 +26,19 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
-    "@playwright/test": "^1.55.0",
     "@preact/preset-vite": "^2.10.2",
     "@rollup/plugin-replace": "^6.0.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@wdio/cli": "^9.19.2",
+    "@wdio/local-runner": "^9.19.2",
+    "@wdio/mocha-framework": "^9.19.2",
+    "@wdio/spec-reporter": "^9.19.2",
     "formik": "^2.4.6",
     "glob": "^11.0.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "wdio-obsidian-service": "^2.1.2"
   }
 }
