--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test:e2e": "wdio run ./wdio.conf.ts"
+    "test:e2e": "wdio run ./wdio.conf.mts"
   },
   "dependencies": {
     "@codemirror/state": "^6.5.2",
@@ -28,17 +28,25 @@
     "@mui/material": "^7.2.0",
     "@preact/preset-vite": "^2.10.2",
     "@rollup/plugin-replace": "^6.0.2",
+    "@types/chai": "^5.2.2",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^20.12.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@wdio/cli": "^9.19.2",
     "@wdio/local-runner": "^9.19.2",
     "@wdio/mocha-framework": "^9.19.2",
     "@wdio/spec-reporter": "^9.19.2",
+    "chai": "^5.3.3",
     "formik": "^2.4.6",
     "glob": "^11.0.3",
+    "mocha": "^10.8.2",
+    "obsidian": "^1.8.7",
+    "obsidian-launcher": "^2.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "vite": "^7.0.6",
+    "wdio-obsidian-reporter": "^2.1.2",
     "wdio-obsidian-service": "^2.1.2"
   }
 }
