--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test:e2e": "wdio run ./wdio.conf.mts"
+    "test": "jest --config test-configs/jest.config.js",
+    "test:watch": "jest --config test-configs/jest.config.js --watch",
+    "test:coverage": "jest --config test-configs/jest.config.js --coverage",
+    "test:unit": "jest --config test-configs/jest.config.js tests/unit",
+    "test:integration": "jest --config test-configs/jest.config.js tests/integration",
+    "test:performance": "jest --config test-configs/jest.config.js tests/performance",
+    "test:e2e": "wdio run ./wdio.conf.mts",
+    "test:all": "npm run test && npm run test:e2e"
   },
   "dependencies": {
     "@codemirror/state": "^6.5.2",
@@ -40,9 +47,14 @@
     "chai": "^5.3.3",
     "formik": "^2.4.6",
     "glob": "^11.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "babel-jest": "^29.7.0",
+    "@babel/preset-env": "^7.23.0",
     "mocha": "^10.8.2",
     "obsidian": "^1.8.7",
     "obsidian-launcher": "^2.1.2",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "vite": "^7.0.6",
