--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "use-immer": "^0.11.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
     "@preact/preset-vite": "^2.10.2",
     "@rollup/plugin-replace": "^6.0.2",
     "@types/chai": "^5.2.2",
+    "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "^20.12.0",
     "@types/react": "^19.1.9",
@@ -44,13 +46,12 @@
     "@wdio/local-runner": "^9.19.2",
     "@wdio/mocha-framework": "^9.19.2",
     "@wdio/spec-reporter": "^9.19.2",
+    "babel-jest": "^29.7.0",
     "chai": "^5.3.3",
     "formik": "^2.4.6",
     "glob": "^11.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "babel-jest": "^29.7.0",
-    "@babel/preset-env": "^7.23.0",
     "mocha": "^10.8.2",
     "obsidian": "^1.8.7",
     "obsidian-launcher": "^2.1.2",
