--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^20.12.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@wdio/appium-service": "^9.20.0",
     "@wdio/cli": "^9.19.2",
     "@wdio/local-runner": "^9.19.2",
     "@wdio/mocha-framework": "^9.19.2",
@@ -59,6 +60,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "vite": "^7.0.6",
+    "wdio-appium-service": "^0.2.3",
     "wdio-obsidian-reporter": "^2.1.2",
     "wdio-obsidian-service": "^2.1.2"
   }
