--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:integration": "jest --config test-configs/jest.config.js tests/integration",
     "test:performance": "jest --config test-configs/jest.config.js tests/performance",
     "test:e2e": "wdio run ./wdio.conf.mts",
+    "test:e2e:no-proxy": "node run-e2e-no-proxy.js",
     "test:all": "npm run test && npm run test:e2e"
   },
   "dependencies": {
