--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "use-immer": "^0.11.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.28.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
     "@babel/preset-env": "^7.23.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
