--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test": "jest --config test-configs/jest.config.js",
-    "test:watch": "jest --config test-configs/jest.config.js --watch",
-    "test:coverage": "jest --config test-configs/jest.config.js --coverage",
-    "test:unit": "jest --config test-configs/jest.config.js tests/unit",
-    "test:integration": "jest --config test-configs/jest.config.js tests/integration",
-    "test:performance": "jest --config test-configs/jest.config.js tests/performance",
-    "test:e2e": "wdio run ./wdio.conf.mts",
-    "test:e2e:no-proxy": "node run-e2e-no-proxy.js",
+    "test": "jest --config test/configs/jest.config.js",
+    "test:watch": "jest --config test/configs/jest.config.js --watch",
+    "test:coverage": "jest --config test/configs/jest.config.js --coverage",
+    "test:unit": "jest --config test/configs/jest.config.js test/unit",
+    "test:integration": "jest --config test/configs/jest.config.js test/integration",
+    "test:performance": "jest --config test/configs/jest.config.js test/performance",
+    "test:e2e": "wdio run ./test/configs/wdio.conf.mts",
+    "test:e2e:no-proxy": "node test/e2e/run-e2e-no-proxy.js",
     "test:all": "npm run test && npm run test:e2e"
   },
   "dependencies": {
