--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       },
       "types": ["vite/client", "preact"]
     },
-    "include": ["src"],
+    "include": ["src", "test"],
     "exclude": ["node_modules", "dist"]
   }
