refactor: 更新所有导入路径到新的扁平化结构 (Phase 3)
- 更新 tsconfig.json 路径映射
  - @core → @lib
  - @state → @store
  - @shared/components → @ui
  - @features → @views
  - 添加 @hooks, @config 别名

- 使用 Node.js 脚本批量更新导入路径
  - 更新了 79 个文件的导入语句
  - 使用正确的 UTF-8 编码处理所有文件
  - 避免了之前的编码问题

- 创建导入路径更新脚本
  - scripts/update-imports.js
  - 使用 fs.readFileSync/writeFileSync 的 utf8 选项

所有导入路径已更新为新的扁平化结构。
下一步：验证构建和类型检查。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,14 @@
       "isolatedModules": true,
       "baseUrl": ".",
       "paths": {
-        "@/*": ["src/*"],           // 已有就保持
-        "@core/*": ["src/core/*"],  // 后续使用
-        "@platform/*": ["src/platform/*"],
-        "@features/*": ["src/features/*"],
-        "@shared/*": ["src/shared/*"],
-        "@state/*": ["src/state/*"]
+        "@/*": ["src/*"],
+        "@lib/*": ["src/lib/*"],
+        "@store/*": ["src/store/*"],
+        "@ui/*": ["src/ui/*"],
+        "@views/*": ["src/views/*"],
+        "@hooks/*": ["src/hooks/*"],
+        "@config/*": ["src/config/*"],
+        "@platform/*": ["src/platform/*"]
       },
       "types": ["vite/client", "preact"]
     },
