移除无用依赖

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
         "@utils/*": ["src/utils/*"],
         "@services/*": ["src/lib/services/*"],
         "@constants/*": ["src/constants/*"],
-        "@shared/*": ["src/shared/*"]
+        "@shared/*": ["src/shared/*"],
+        "@core/*": ["src/core/*"]
       },
       "types": ["vite/client", "preact"]
     },
